<resources>
    <string name="app_name">ADMDF</string>

    <!-- Emails -->
    <string name="tv_email">Digite seu Email</string>
    <string name="tv_email2">Email*</string>

    <!-- Senhas -->
    <string name="tv_senha">Digite sua Senha</string>
    <string name="tv_senhaCad">Digite uma Senha</string>
    <string name="tv_senha2">Senha*</string>
    <string name="tv_confimaSenha">Confirmar Senha</string>

    <!-- Login e Cadastro -->
    <string name="bt_cadastro">Cadastrar</string>
    <string name="bt_login">Login</string>

    <!-- Esqueci a Senha -->
    <string name="tv_forgot">Esqueci a Senha</string>

    <!-- Tela Visitantes -->
    <string name="tv_visitantes">Visitantes</string>
    <string name="tv_igrejaVisit">Frequenta outra igreja ?</string>
    <string name="tv_visitConvidado">Convidado ?</string>
    <!-- Retornos | Envio -->
    <string name="bt_voltar">Voltar</string>
    <string name="bt_enviar">Enviar</string>

    <!-- Nomes -->
    <string name="tv_name">Nome</string>
    <string name="tv_name2">Nome*</string>

    <!-- Tela Menu -->
    <string name="bt_Aniversario">Aniversariantes</string>
    <string name="bt_avisoGeral">Avisos Gerais</string>
    <string name="bt_AcaoGraca">Ações de Graças</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fundo">fundoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_aniver">AniverActivity</string>

    <string name="tv_mensagem">Eu sei que o meu Redentor vive e que por fim se levantará sobre a terra. E depois que o meu corpo estiver consumido e sem carne, verei a Deus. Eu o verei por mim mesmo, com meus próprios olhos, eu, não outros. Como o meu coração anseia dentro de mim!   Jó 19.25-27</string>

</resources>