<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/vw_logoCadastro"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="804dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logopreto" />

    <EditText
        android:id="@+id/tv_confirmSenhaCad"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/custom_button_branco"
        android:ems="10"
        android:hint="@string/tv_confimaSenha"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/bt_cadastroCad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_senhaCad" />

    <EditText
        android:id="@+id/tv_senhaCad"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_button_branco"
        android:ems="10"
        android:hint="@string/tv_senhaCad"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tv_confirmSenhaCad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailCad" />

    <EditText
        android:id="@+id/tv_emailCad"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_button_branco"
        android:ems="10"
        android:hint="@string/tv_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tv_senhaCad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nomeCad" />

    <EditText
        android:id="@+id/tv_nomeCad"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_button_branco"
        android:ems="10"
        android:hint="@string/tv_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tv_emailCad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_logoCadastro" />

    <Button
        android:id="@+id/bt_cadastroCad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/custom_button1"
        android:text="@string/bt_cadastro"
        app:layout_constraintBottom_toTopOf="@+id/bt_voltarCad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.991" />

    <Button
        android:id="@+id/bt_voltarCad"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/custom_button1"
        android:text="@string/bt_voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_name2"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:text="@string/tv_email2"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="172dp"
        android:text="@string/tv_senha2"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

</androidx.constraintlayout.widget.ConstraintLayout>