<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <ImageView
        android:id="@+id/vw_logoCadastro"
        android:layout_width="154dp"
        android:layout_height="70dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="804dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logopreto" />

    <EditText
        android:id="@+id/tv_senhaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="400dp"
        android:ems="10"
        android:hint="@string/tv_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/bt_loginLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailLogin" />

    <EditText
        android:id="@+id/tv_emailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/tv_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/tv_senhaLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_logoCadastro" />

    <Button
        android:id="@+id/bt_loginLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/tv_forgot"
        android:text="@string/bt_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/tv_forgotLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/tv_forgot"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_loginLogin" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="11dp"
        android:text="@string/tv_email2"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_emailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_logoCadastro" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="11dp"
        android:text="@string/tv_senha2"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_senhaLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>