<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="58dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopreto" />

    <TextView
        android:id="@+id/tv_nameVisit"
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="TextView"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="163dp"
        android:text="@string/tv_visitantes"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_nomeVisit"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_button_branco"
        android:ems="10"
        android:hint="@string/tv_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchIgreja"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="7dp"
        android:text="@string/tv_igrejaVisit"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_nomeIgrejaVisit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nomeVisit" />

    <EditText
        android:id="@+id/tv_nomeIgrejaVisit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Nome da Igreja"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/switchConvidado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchIgreja" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <Switch
        android:id="@+id/switchConvidado"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_visitConvidado"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Convidado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tv_Convidado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchConvidado" />

</androidx.constraintlayout.widget.ConstraintLayout>